--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "truffle.js",
   "directories": {
-    "test": "test"
+    "test": "mocha"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bignumber.js": "^6.0.0",
+    "mocha": "^5.0.1",
+    "truffle-hdwallet-provider": "0.0.3",
+    "ganache-cli": "^6.0.3",
     "zeppelin-solidity": "^1.7.0"
   }
 }
